cmake_minimum_required(VERSION 3.10)

project(Rocket)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})

if(CMAKE_BUILD_TYPE STREQUAL Release)
    set(BUILD_SHARED_LIBS FALSE)
else()
    set(BUILD_SHARED_LIBS TRUE)
endif()

set(SFML_BUILD_NETWORK FALSE)
set(SFML_BUILD_DOC FALSE)
set(SFML_BUILD_EXAMPLES FALSE)


set(SFML_BUILD_AUDIO TRUE)
set(SFML_BUILD_SYSTEM TRUE)
set(SFML_BUILD_GRAPHICS TRUE)
set(SFML_BUILD_WINDOW TRUE)

add_subdirectory(./third_party/SFML)
add_subdirectory(${PROJECT_NAME})
